# paracel_lab_test

./: README.md  docker-compose.yml  pyproject.toml
tracer_api/: Dockerfile  manage.py  requirements.txt
tracer_api/api/: admin.py  constants.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
tracer_api/api/fixtures/: order_model.json
tracer_api/api/migrations/: 0001_initial.py  0002_articlemodel_price_ordermodel_tracking_number.py  0002_auto_20240716_1415.py  0003_auto_20240716_1415.py  0004_auto_20240716_1418.py  0005_auto_20240716_1438.py
tracer_api/tracer_api/: asgi.py  settings.py  urls.py  wsgi.py
